# git-ticker

./: .cursorrules  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml  validate_commits.py
.github/workflows/: code-quality.yml  commit-summaries.yml  vulnerability-scan-dependencies.yml  vulnerability-scan-docker.yml
git_ticker/git/domain/: __init__.py  entities.py
git_ticker/git/repositories/: __init__.py  implementations.py  interfaces.py
git_ticker/git/services/: file_filter_service.py  git_service.py
git_ticker/notifications/domain/: __init__.py
git_ticker/notifications/repositories/: __init__.py  implementations.py
git_ticker/notifications/services/: __init__.py  notification_service.py
git_ticker/summarization/domain/: value_objects.py
git_ticker/summarization/repositories/: base_langchain_agent.py  factory.py  implementations.py  interfaces.py
git_ticker/summarization/services/: batch_summarization_service.py  summarization_service.py
git_ticker/summarization/templates/: __init__.py  default_summary_template.md
gitlab_ticker/git/: __init__.py
gitlab_ticker/git/domain/: __init__.py  entities.py  value_objects.py
gitlab_ticker/git/repositories/: __init__.py  implementations.py  interfaces.py
gitlab_ticker/git/services/: __init__.py  git_service.py
gitlab_ticker/notifications/: __init__.py
gitlab_ticker/notifications/domain/: value_objects.py
gitlab_ticker/notifications/repositories/: implementations.py
gitlab_ticker/notifications/services/: notification_service.py
gitlab_ticker/summarization/: __init__.py
gitlab_ticker/summarization/domain/: __init__.py  value_objects.py
gitlab_ticker/summarization/repositories/: __init__.py  base_langchain_agent.py  factory.py  implementations.py  interfaces.py
gitlab_ticker/summarization/services/: __init__.py  batch_summarization_service.py  summarization_service.py
