[tool.poetry]
name = "git-ticker"
version = "0.1.0"
description = ""
authors = ["Pierre Rossinès <pierre.rossines@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.3"
langchain-anthropic = "^1.0.1"
python-dotenv = "^1.2.1"
langchain-openai = "^1.0.2"
langsmith = "^0.4.41"
slack-sdk = "^3.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
ty = "^0.0.2"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["git_ticker"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["git_ticker"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true

[tool.ty]
# Ty configuration
environment = { python-version = "3.12" }
